fix: responsive spacing under the product slider

--- a/src/components/ProductSlider/ProductSlider.module.scss
+++ b/src/components/ProductSlider/ProductSlider.module.scss
@@ -3,6 +3,15 @@
   width: 100%;
   overflow-x: scroll;
   padding-top: 30px;
+  margin-bottom: 70px;
+
+  @media (max-width: 1439px) {
+    margin-bottom: 164px;
+  }
+
+  @media (max-width: 829px) {
+    margin-bottom: 53px;
+  }
 }
 
 .sliderContainer {
